--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
   "devDependencies": {
     "concurrently": "^2.2.0",
     "lite-server": "^2.2.2",
-    "typescript": "^2.0.2",
+    "typescript": "2.4.0",
     "typings": "^1.3.2"
   },
   "keywords": [],
